--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
         <meta name="Content-language" content="italiano">
         <meta name="Rating" content="General">
         <meta name="revisit-after" content="1 month">
-        <meta name="author" content="Sébastien RONDEAU-CAMEIRA">
+        <meta name="author" content="Sébastien RONDEAU CAMEIRA">
         <title>PACE per TUTTI</title>
         <link rel="stylesheet" href="https://paixpourtous.com/css/style.css">
         <link rel="icon" type="image/png" href="favicon.png">
