--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <br>
             <h2>Fai la tua ricerca da solo...</h2>
             <h3>Il tuo voto è la tua carta di credito.</h3>
+            <h3>Puoi cambiare il mondo, smettere di sovvenzionare la crudeltà.</h3>
             <form action="https://www.google.it/search" method="GET">
                 <input type="hidden" value="vegan" name="q">
                 <p>GO
